fix header on mobile for good, more work on implementing scrolling animations...

--- a/src/components/ResumeCanvas/ResumeCanvas.scss
+++ b/src/components/ResumeCanvas/ResumeCanvas.scss
@@ -1,10 +1,12 @@
 #ResumeCanvasContainer {
   height: 100vh;
   width: 100%;
+  border: 1px solid gold;
 }
 
 canvas {
   position: fixed;
   top: 0;
   left: 0;
+  border: 2px dashed cyan;
 }
